Fixed horizontal alignment for desktop

--- a/confetti-calculator/styles.css
+++ b/confetti-calculator/styles.css
@@ -1,5 +1,5 @@
 body {
-    width: 75%;
+    width: 50%;
     margin: 0 auto;
 }
 
